# void

./: .gitignore  .gitpod.dockerfile  .gitpod.yml  .sample.env  Cargo.toml  Dockerfile  Makefile  Procfile  README.md  RustConfig  compose.yml  nixpacks.toml  rust-toolchain.toml  schema.dbml  sqlx-data.json
.devcontainer/: devcontainer.json
.idx/: dev.nix
crates/adapter/: Cargo.toml
crates/adapter/src/: db.rs
crates/application/: Cargo.toml
crates/application/src/: identifier.rs  lib.rs
crates/application/src/gateway/repository/: user.rs
crates/application/src/services/user/: check_user.rs  create.rs  mod.rs
crates/application/src/usecase/user/: mod.rs  validator.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  postgres.rs
crates/discord-bot/: Cargo.toml
crates/discord-bot/src/: bot.rs  lib.rs
crates/discord-bot/src/commands/: mod.rs
crates/discord-bot/src/commands/prefix/: mod.rs
crates/discord-bot/src/commands/prefix/general/: info.rs  mod.rs
crates/discord-bot/src/commands/prefix/generator/: mod.rs  pwdgen.rs
crates/discord-bot/src/commands/slash/: mod.rs
crates/discord-bot/src/handler/: interaction.rs  mod.rs  system.rs
crates/discord-bot/src/handler/user/: mod.rs
crates/discord-bot/src/helpers/: generator.rs  mod.rs  system.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/entity/: user.rs
crates/domain/src/value_object/: id.rs  mod.rs  name.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: bot.rs  lib.rs  logger.rs  storage.rs
crates/json-boundary/: Cargo.toml
migrations/: 1_user.sql  20220518045143_init_schema.down.sql  20220518045143_init_schema.up.sql  20230309062836_create_ai_table.down.sql  20230309062836_create_ai_table.up.sql  2_item.sql  3_inventory.sql
src/: lib.rs  main.rs
src/bootstrap/: application.rs  database.rs  env.rs  mod.rs
src/bot/: bot.rs  config.rs  handler.rs  init.rs  mod.rs  shared.rs
src/bot/commands/: mod.rs
src/bot/commands/app_commands/: bump.rs  general.rs  mod.rs
src/bot/commands/app_commands/auto_respond/: mod.rs  set.rs
src/bot/commands/app_commands/bump/: cancel_bump.rs  create_bump.rs  mod.rs
src/bot/commands/prefix_commands/: admin.rs  fun.rs  game.rs  general.rs  mod.rs
src/bot/events/: cache.rs  message.rs  mod.rs  ready.rs
src/commands/: mod.rs
src/commands/interactions/: admin.rs  challenge.rs  fun.rs  game.rs  general.rs  mod.rs
src/db/: users.rs
src/domain/: auto_respond.rs  mod.rs  user.rs
src/repository/: keyword_repository.rs  mod.rs  user_repository.rs
src/usecase/: auto_respond_usecase.rs  keyword_usecase.rs  mod.rs  user_usecase.rs
src/utils/: bumps.txt  helpers.rs  mod.rs  random_number.rs  response.txt  wordlist.txt
