[package]
name = "void"
version = "0.1.2"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
# mockall = "0.11.0"
anyhow = "1.0.75"
chrono = { version = "0.4.27", default-features = false, features = ["clock"] }
rand = "0.8.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4"] }
openai-api = "0.1.4"
serde = { version = "1.0.188", features = ["derive"] }
sysinfo = "0.29.9"

[dependencies.tokio]
version = "1.32.0"
features = ["macros", "rt-multi-thread"]

[dependencies.sqlx]
version = "^0.7.1"
features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid"]

[dependencies.serenity]
version = "0.11.6"
default-features = true
