[package]
name = "void"
version = "0.1.2"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "void-bot"
path = "src/bin/void.rs"

[workspace]
members = [
  "crates/domain",
  "crates/application",
  "crates/db",
  "crates/infrastructure",
  "crates/adapter",
  "crates/json-boundary",
  "crates/discord-bot"
]

[dependencies]
futures-signals = "0.3.33"
rayon = "1.8.0"
# mockall = "0.11.0"
void-infrastructure = { path = "crates/infrastructure", version = "0.1.0" }
