[package]
name = "void"
version = "0.1.2"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "void-bot"
path = "src/bin/void.rs"

[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/db",
    "crates/infrastructure",
    "crates/adapter",
    "crates/discord-bot"
]

[dependencies]
void-infrastructure = { path = "crates/infrastructure", version = "0.1.0" }

[dependencies.tokio]
version = "1.35.1"
features = ["macros", "rt-multi-thread"]

# mockall = "0.11.0"
