[package]
name = "void-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
void-application = { version = "0.1.0", path = "../application" }
void-domain = { version = "0.1.0", path = "../domain" }