[package]
name = "void-application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.27", default-features = false, features = ["clock"] }
rand = "0.8.5"
thiserror = "1.0.50"

void-domain = { path = "../domain", version = "0.1.0" }
