[package]
name = "void-application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
rand = "0.8.5"
thiserror = "1.0.56"

void-domain = { path = "../domain", version = "0.1.0" }
log = "0.4.20"
