[package]
name = "void-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
void-domain = { version = "0.1.0", path = '../domain' }
void-adapter = { version = "0.1.0", path = '../adapter' }
void-application = { version = "0.1.0", path = '../application' }

[dependencies.sqlx]
version = "^0.7.3"
features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid"]
