[package]
name = "void-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
openai-api = "0.1.4"
sysinfo = "0.29.9"
thiserror = "1.0.50"
anyhow = "1.0.75"
chrono = { version = "0.4.27", default-features = false, features = ["clock"] }
rand = "0.8.5"

[dependencies.serenity]
version = "0.11.6"
default-features = true

[dependencies.tokio]
version = "1.32.0"
features = ["macros", "rt-multi-thread"]
