[package]
name = "void-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
openai-api = "0.1.4"
sysinfo = "0.30.5"
thiserror = "1.0.56"
anyhow = "1.0.79"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
rand = "0.8.5"
void-adapter = { version = "0.1.0", path = "../adapter" }

[dev.dependencies]
void-application = { version = "0.1.0", path = "../application" }
void-db = { version = "0.1.0", path = "../db" }
void-domain = { version = "0.1.0", path = "../domain" }

[dependencies.serenity]
version = "0.12.0"
default-features = true

[dependencies.tokio]
version = "1.35.1"
features = ["macros", "rt-multi-thread"]