[package]
name = "void-infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"

void-adapter = { version = "0.1.0", path = "../adapter" }
void-db = { version = "0.1.0", path = "../db" }
void-discord-bot = { version = "0.1.0", path = "../discord-bot" }
clap = { version = "4.4.15", features = ["derive"] }

[dependencies.sqlx]
version = "^0.7.3"
features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid"]

[dependencies.tokio]
version = "1.35.1"
features = ["macros", "rt-multi-thread"]